--- a/formulaire.contact/formilaire.contact.html
+++ b/formulaire.contact/formilaire.contact.html
@@ -7,18 +7,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="formContact">Contact</button>   
-    <div id="contactModale" class="contactModale">
-    <div class="modale-content">
-      <span class="close">&times;</span>
-      <div id="formContainer"></div>
+     <div id="formContainer">
+        <h2 class="form-title">Formulaire de contact</h2>
+  <form id="contactForm" novalidate>
+    <div class="form-group">
+      <label for="nom">Nom</label>
+      <input type="text" id="nom">
+      <div class="error" id="error-nom"></div>
     </div>
-  </div>
-  <div id="confirmationModal" class="confirmation-modal">
-  <div class="confirmation-content">
-    <span class="close-confirmation">&times;</span>
-    <h2>Merci !</h2>
-    <p>Votre message a bien été envoyé.</p>
+
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input type="email" id="email">
+      <div class="error" id="error-email"></div>
+    </div>
+
+    <div class="form-group">
+      <label for="message">Message</label>
+      <textarea id="message" rows="4"></textarea>
+      <div class="error" id="error-message"></div>
+    </div>
+
+    <button type="submit">Envoyer</button>
+    
+  </form>
+</div>
+
+<div id="confirmationModal" class="modal-overlay">
+  <div class="modal-content">
+    <span class="close-button" id="closeModal">&times;</span>
+    <h2>Message envoyé !</h2>
+    <p>Merci pour votre message. Nous vous répondrons dès que possible.</p>
   </div>
 </div>
 </body>
