Add review generation feature and update styles for reviews section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <section id="reviews">
       <div class="section-header">
         <h2 id="reviews-title">Avis clients</h2>
-        <p class="desc">Ajoutez un avis</p>
       </div>
 
       <!-- Filtre -->
@@ -27,6 +26,7 @@
             <option value="1">★☆☆☆☆ (1)</option>
           </select>
         </div>
+        <button id="btn-fake" type="button">+ Générer un avis</button>
       </div>
 
       <!-- Formulaire -->
