--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <fieldset id="price-simulator">
       <h3 id="product-name"></h3>
       <label for="color-select"
-        >Color:</label>
+        >Couleur:</label>
         <select id="color-select" name="color">
           <template id="color-option-template">
             <option></option>
@@ -38,7 +38,6 @@
         <h2 id="reviews-title">Avis clients</h2>
       </div>
 
-      <!-- Filtre -->
       <div class="toolbar">
         <div class="filter">
           <label for="filter-rating">Filtrer par note</label>
@@ -54,7 +53,6 @@
         <button id="btn-fake" type="button">+ Générer un avis</button>
       </div>
 
-      <!-- Formulaire -->
       <form id="review-form" class="card">
         <div class="grid-2">
           <div class="form-control">
@@ -83,10 +81,8 @@
         </div>
       </form>
 
-      <!-- Liste des avis -->
       <div class="list" id="review-list"></div>
 
-      <!-- Template d'un avis -->
       <template id="review-template">
         <article class="review card enter" data-id="" data-rating="">
           <div class="review-header">
@@ -191,7 +187,7 @@
   </div>
 </div>
 
-    <script src="Feature 3 - FAQ accordéon/faq.js"></script>
+    <script src="faq/faq.js"></script>
     <script src="PriceSimulator/script.js"></script>
     <script src="formulaire.contact/contact.js"></script>
     <script src="reviews/reviews.js"></script>
